vrp_shops Update
New css added

--- a/server/resources/[Resources]/vrp_shops/web-side/index.html
+++ b/server/resources/[Resources]/vrp_shops/web-side/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>#vrp</title>
+		<title>#HensaShops</title>
 		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 				<div class="sections">
 					<div class="invLeft"></div>
 					<div class="invMiddle">
-						<input class="amount" type="number" placeholder="QTD" />
+						<input class="amount" type="number" spellcheck="false" onkeypress="return somenteNumeros(event)" value="" placeholder="QTD"/>
 					</div>
 					<div class="invRight"></div>
 				</div>
