--- a/server/resources/[Resources]/crafting/web-side/index.html
+++ b/server/resources/[Resources]/crafting/web-side/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>#HensaCrafting</title>
-		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+		<title>#creative</title>
+		<script src="nui://game/ui/jquery.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link href="css.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
@@ -14,27 +14,18 @@
 					<div id="weightTextLeft"></div>
 					<div id="weightBarLeft"></div>
 				</div>
-				<div class="topInfo">
-					<div class="myInfos"></div>
-					<div class="recipe"></div>
-				</div>
+
+				<div class="recipe"></div>
+
 				<div class="sections">
-					<div class="invBack1">
-					<div class="invBack3">
-						<div class="invLeft"></div>
-					</div>
-					</div>
+					<div class="invLeft"></div>
 					<div class="invMiddle">
-						<input class="amount" spellcheck="false" onkeypress="return somenteNumeros(event)" value="" placeholder="QUANTIDADE"/>
+						<input class="amount" type="number" onKeyPress="if(this.value.length==9) return false;" placeholder="QTD" />
 					</div>
-					<div class="invBack1">
-					<div class="invBack3">
-						<div class="invRight"></div>
-					</div>
-					</div>
+					<div class="invRight"></div>
 				</div>
 			</div>
 		</div>
-		<script src="jquery.js" type="text/javascript"></script>
+		<script src="jquery.js"></script>
 	</body>
 </html>
