--- a/server/resources/[Resources]/homes/web-side/index.html
+++ b/server/resources/[Resources]/homes/web-side/index.html
@@ -7,18 +7,23 @@
 		<link href="css.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
-		<div id="body">
-			<div id="inventory">
-				<div id="myInfos"></div>
-				<div id="invweight"></div>
-
-				<div id="invleft"></div>
-				<div id="invmiddle">
-					<input id="middleButton" class="amount" spellcheck="false" onkeypress="return somenteNumeros(event)" value="" placeholder="QTD">
+		<div class="inventory">
+			<div class="innerInventory">
+				<div id="weight">
+					<div id="weightTextLeft"></div>
+					<div id="weightTextRight"></div>
+					<div id="weightBarLeft"></div>
+					<div id="weightBarRight"></div>
 				</div>
-				<div id="invright"></div>
+
+				<div class="sections">
+					<div id="invleft"></div>
+					<div class="invmiddle">
+						<input class="amount" type="number" placeholder="QTD" />
+					</div>
+					<div id="invright"></div>
+				</div>
 			</div>
-		</div>
-		<script src="jquery.js" type="text/javascript"></script>
-	</body>
-</html>
+			<script src="jquery.js" type="text/javascript"></script>
+		</body>
+	</html>
