--- a/server/resources/[vrp]/taskbar/web-side/index.html
+++ b/server/resources/[vrp]/taskbar/web-side/index.html
@@ -1,8 +1,9 @@
 <head>
 	<link rel="stylesheet" href="css.css">
-	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-	<script src="jquery.js" type="text/javascript"></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+	<script src="nui://game/ui/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<script src="jquery.js"></script>
 </head>
 
 <body>
