--- a/server/resources/[vrp]/tablet/web-side/index.html
+++ b/server/resources/[vrp]/tablet/web-side/index.html
@@ -1,25 +1,25 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>#HensaTablet</title>
-		<script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+		<title>#creative</title>
+		<script src="nui://game/ui/jquery.js"></script>
 		<link href="css.css" rel="stylesheet" type="text/css"/>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 	</head>
-	<body class="home page-template-default" onselectstart='return false' ondragstart='return false'>
+	<body>
 		<div id="mainPage">
-
 			<div id="header"></div>
 
 			<div id="mainMenu">
-				<li onclick="rulesPage();" class="active">Regras</li>
-				<li onclick="socialPage();">Twitter</li>
-				<li onclick="commandsPage();">Comandos</li>
+				<li onclick="commandsPage();" class="active">COMANDOS</li>
+				<li onclick="socialPage();">TWITTER</li>
+			<!--<li onclick="racesPage();">CORRIDAS</li>
+			    <li onclick="benefactor('Carros');">BENEFACTOR</li>-->
 			</div>
 
 			<div id="content"></div>
-
 		</div>
-		<script src="jquery.js" type="text/javascript"></script>
+		<script src="jquery.js"></script>
 	</body>
 </html>
