--- a/server/resources/[vrp]/hud/web-side/index.html
+++ b/server/resources/[vrp]/hud/web-side/index.html
@@ -15,8 +15,10 @@
 			<div id="displayTop">
 				<span id="mph"></span>
 				<span id="gasoline"></span>
-			    <span id="seatBelt">CINTO</span>
-			    <span id="hardBelt">HARD</span>
+			    <span id="seatBeltOff"><img src="beltOff.png"></span>
+			    <span id="seatBeltOn"><img src="beltOn.png"></span>
+			    <span id="hardBeltOff"><img src="beltOff.png"></span>
+			    <span id="hardBeltOn"><img src="beltOn.png"></span>
 			</div>
 
 			<div id="displayMiddle"></div>
