--- a/server/resources/[vrp]/login/web-side/index.html
+++ b/server/resources/[vrp]/login/web-side/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>#creative</title>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<style>
 		#index {
@@ -72,6 +71,8 @@
 			<li class="spawnNow" data-spawn="spawn">CONFIRMAR</li>
 		</ul>
 	</div>
+
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 	<script>
 		$(() => {
