--- a/server/resources/[vrp]/skinshop/web-side/index.html
+++ b/server/resources/[vrp]/skinshop/web-side/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 		<link rel="stylesheet" href="./reset.css">
 		<link rel="stylesheet" href="./style.css">
-		<title>#vrp</title>
+		<title>#creative</title>
 	</head>
 
 	<body>
