--- a/server/resources/[essentials]/vrp/loading/index_backup.html
+++ b/server/resources/[essentials]/vrp/loading/index_backup.html
@@ -3,7 +3,7 @@
   
    <head>
       <meta charset="UTF-8"/>
-	  <title>#gringaroleplay</title>
+	  <title>#creative</title>
 	  <link href="https://fonts.googleapis.com/css2?family=Jura:wght@600&display=swap" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="./style.css">
@@ -13,7 +13,8 @@
       <div class="overlay"></div>
       <main class="main">
          <section class="contact">
-            <h1 class="title"><img src="loadingserverlgbt.png"/></h1>
+            <h1 class="title">GRINGA</h1>
+            <h1 class="description">Discord.gg/gBZWMgtzqG</h1>
 			<br>
             <div class="spin"></div>
          </section>
