--- a/server/resources/[Essentials]/vrp/loading/index.html
+++ b/server/resources/[Essentials]/vrp/loading/index.html
@@ -13,9 +13,10 @@
       <div class="overlay"></div>
       <main class="main">
          <section class="contact">
-            <h1 class="title"><img src="loadingserverlgbt.png"/></h1>
-			<br>
-            <div class="spin"></div>
+            <h1 class="title">GRINGA </h1>
+            <h1 class="description">Discord.gg/gBZWMgtzqG</h1>
+			<!--<br>
+            <div class="spin"></div>-->
          </section>
       </main>
       <script  src="./script.js"></script>
