--- a/server/resources/[vrp]/barbershop/web-side/index.html
+++ b/server/resources/[vrp]/barbershop/web-side/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>#vrp</title>
+		<title>#creative</title>
 		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
@@ -15,13 +15,33 @@
 
 			<form id="formBarbershop">
 				<div class="block visage active">
-					<div class="group" style="padding-top: 0;">						
-						<div class="input" style="display: none;">
+					<div class="group" style="padding-top: 0;">
+						<div class="input">
+							<div class="label">Rosto</div>
+							<div class="label-value" data-legend="45"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="fathers" class="fathers" min="0" max="45">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Parentesco</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="10" type="range" id="kinship" class="kinship" min="0" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
 							<div class="label">Cor da Pele</div>
 							<div class="label-value" data-legend="45"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="skinColor" class="skinColor" min="0" max="45">
+								<input value="0" type="range" id="skincolor" class="skincolor" min="0" max="45">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -31,7 +51,7 @@
 							<div class="label-value" data-legend="31"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="eyesColor" class="eyesColor" min="0" max="31">
+								<input value="0" type="range" id="eyecolor" class="eyecolor" min="0" max="31">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -43,7 +63,7 @@
 							<div class="label-value" data-legend="23"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="-1" type="range" id="complexionModel" class="complexionModel" min="-1" max="11">
+								<input value="0" type="range" id="acne" class="acne" min="0" max="23">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -53,7 +73,7 @@
 							<div class="label-value" data-legend="12"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="12" type="range" id="blemishesModel" class="blemishesModel" min="-1" max="23">
+								<input value="12" type="range" id="stains" class="stains" min="0" max="12">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -63,7 +83,7 @@
 							<div class="label-value" data-legend="17"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="frecklesModel" class="frecklesModel" min="-1" max="17">
+								<input value="0" type="range" id="freckles" class="freckles" min="0" max="17">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -73,7 +93,7 @@
 							<div class="label-value" data-legend="15"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="15" type="range" id="ageingModel" class="ageingModel" min="-1" max="14">
+								<input value="15" type="range" id="aging" class="aging" min="0" max="15">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -87,7 +107,7 @@
 							<div class="label-value" data-legend="77"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="hairModel" class="hairModel" min="0" max="77">
+								<input value="0" type="range" id="hair" class="hair" min="0" max="77">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -97,7 +117,7 @@
 							<div class="label-value" data-legend="60"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="firstHairColor" class="firstHairColor" min="0" max="60">
+								<input value="0" type="range" id="haircolor" class="haircolor" min="0" max="60">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -107,7 +127,7 @@
 							<div class="label-value" data-legend="60"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="secondHairColor" class="secondHairColor" min="0" max="60">
+								<input value="0" type="range" id="haircolor2" class="haircolor2" min="0" max="60">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -116,13 +136,33 @@
 					<div class="group">
 						<div class="input">
 							<div class="label">Maquiagem</div>
-							<div class="label-value" data-legend="71"></div>
+							<div class="label-value" data-legend="72"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="makeupModel" class="makeupModel" min="-1" max="71">
+								<input value="0" type="range" id="makeup" class="makeup" min="0" max="72">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
-						</div>						
+						</div>
+
+						<div class="input">
+							<div class="label">Intensidade da Maquiagem</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="10" type="range" id="makeupintensity" class="makeupintensity" min="0" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Cor da Maquiagem</div>
+							<div class="label-value" data-legend="62"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="makeupcolor" class="makeupcolor" min="0" max="62">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
 					</div>
 
 					<div class="group">
@@ -131,7 +171,17 @@
 							<div class="label-value" data-legend="10"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="-1" type="range" id="lipstickModel" class="lipstickModel" min="-1" max="9">
+								<input value="0" type="range" id="lipstick" class="lipstick" min="0" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Intensidade do Batom</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="10" type="range" id="lipstickintensity" class="lipstickintensity" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -141,7 +191,7 @@
 							<div class="label-value" data-legend="63"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="lipstickColor" class="lipstickColor" min="0" max="63">
+								<input value="0" type="range" id="lipstickcolor" class="lipstickcolor" min="0" max="63">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -153,7 +203,17 @@
 							<div class="label-value" data-legend="34"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="eyebrowsModel" class="eyebrowsModel" min="0" max="34">
+								<input value="0" type="range" id="eyebrow" class="eyebrow" min="0" max="34">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Intensidade da Sobrancelha</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="10" type="range" id="eyebrowintensity" class="eyebrowintensity" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -163,7 +223,7 @@
 							<div class="label-value" data-legend="54"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="eyebrowsColor" class="eyebrowsColor" min="0" max="54">
+								<input value="0" type="range" id="eyebrowcolor" class="eyebrowcolor" min="0" max="54">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -175,7 +235,17 @@
 							<div class="label-value" data-legend="28"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="-1" type="range" id="beardModel" class="beardModel" min="-1" max="28">
+								<input value="0" type="range" id="beard" class="beard" min="0" max="28">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Intensidade da Barba</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="10" type="range" id="beardintentisy" class="beardintentisy" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -185,7 +255,7 @@
 							<div class="label-value" data-legend="54"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="beardColor" class="beardColor" min="0" max="63">
+								<input value="0" type="range" id="beardcolor" class="beardcolor" min="0" max="54">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -197,7 +267,17 @@
 							<div class="label-value" data-legend="32"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="-1" type="range" id="blushModel" class="blushModel" min="-1" max="32">
+								<input value="0" type="range" id="blush" class="blush" min="0" max="32">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Intensidade do Blush</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="10" type="range" id="blushintentisy" class="blushintentisy" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -207,17 +287,24 @@
 							<div class="label-value" data-legend="63"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="blushColor" class="blushColor" min="0" max="63" step="1">
+								<input value="0" type="range" id="blushcolor" class="blushcolor" min="0" max="63">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="buttons">
-				<button class="button yes">S  A  L  V  A  R</button>
-				</div>
+				<button class="submit">S  A  L  V  A  R</button>
 			</form>
 		</div>
+
+		<div class="popup confirmation">
+			<p>Deseja salvar a aparência atual?</p>
+			<div class="buttons">
+				<div class="button yes">S I M</div>
+				<div class="button no">N Ã O</div>
+			</div>
+		</div>
+
 		<script src="front.js" type="text/javascript"></script>
 		<script src="script.js" type="text/javascript"></script>
 	</body>
