--- a/server/resources/[vrp]/barbershop/web-side/index.html
+++ b/server/resources/[vrp]/barbershop/web-side/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>#creative</title>
-		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+		<script src="nui://game/ui/jquery.js"></script>
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
@@ -9,39 +9,49 @@
 		<div class="openBarbershop">
 
 			<div class="tab">
-				<a href="#" class="visage active" data-link="visage">Primário</a>
-				<a href="#" class="pilosite" data-link="pilosite">Secundário</a>
+				<a href="#" class="visage active" data-link="visage">Familia</a>
+				<a href="#" class="pilosite" data-link="pilosite">Aparência</a>
 			</div>
 
 			<form id="formBarbershop">
 				<div class="block visage active">
 					<div class="group" style="padding-top: 0;">
 						<div class="input">
-							<div class="label">Rosto</div>
-							<div class="label-value" data-legend="45"></div>
+							<div class="label">Pai</div>
+							<div class="label-value" data-legend="44"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="fathers" class="fathers" min="0" max="45">
+								<input value="0" type="range" id="fathers" class="fathers" min="0" max="44">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 
 						<div class="input">
-							<div class="label">Parentesco</div>
-							<div class="label-value" data-legend="10"></div>
+							<div class="label">Mãe</div>
+							<div class="label-value" data-legend="45"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="10" type="range" id="kinship" class="kinship" min="0" max="10">
+								<input value="0" type="range" id="mothers" class="mothers" min="21" max="45">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Semblante</div>
+							<div class="label-value" data-legend="100"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="10" type="range" id="kinship" class="kinship" min="0" max="100">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 
 						<div class="input">
 							<div class="label">Cor da Pele</div>
-							<div class="label-value" data-legend="45"></div>
+							<div class="label-value" data-legend="100"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="skincolor" class="skincolor" min="0" max="45">
+								<input value="0" type="range" id="skincolor" class="skincolor" min="0" max="100">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -57,7 +67,7 @@
 						</div>
 					</div>
 
-					<div class="group" style="padding-bottom: 0;">
+					<div class="group">
 						<div class="input">
 							<div class="label">Acne</div>
 							<div class="label-value" data-legend="23"></div>
@@ -98,26 +108,168 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="group" style="padding-bottom: 0px;">
+						<div class="input">
+							<div class="label">Largura do Nariz</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face00" class="face00" min="-10" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Altura do Nariz</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face01" class="face01" min="-10" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Tamanho do Nariz</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face04" class="face04" min="-10" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Altura da Testa</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face06" class="face06" min="-10" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Altura da Olheira</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face08" class="face08" min="-10" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Tamanho da Olheira</div>
+							<div class="label-value" data-legend="10"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face09" class="face09" min="-10" max="10">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Largura da Bochecha</div>
+							<div class="label-value" data-legend="20"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face10" class="face10" min="0" max="20">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Grossura da Boca</div>
+							<div class="label-value" data-legend="20"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face12" class="face12" min="-20" max="20">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Tamanho da Bochecha</div>
+							<div class="label-value" data-legend="20"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face13" class="face13" min="-20" max="20">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Grossura do Pescoço</div>
+							<div class="label-value" data-legend="20"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face14" class="face14" min="-20" max="20">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Tamanho do Queixo</div>
+							<div class="label-value" data-legend="20"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face15" class="face15" min="-20" max="20">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Grossura do Queixo</div>
+							<div class="label-value" data-legend="20"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face16" class="face16" min="0" max="20">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input">
+							<div class="label">Alinhamento do Queixo</div>
+							<div class="label-value" data-legend="20"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face17" class="face17" min="-20" max="20">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+
+						<div class="input" style="padding-bottom: 0;">
+							<div class="label">Tamanho do Pescoço</div>
+							<div class="label-value" data-legend="20"></div>
+							<div class="type-range">
+								<a href="#" class="arrow arrow-left">&nbsp;</a>
+								<input value="0" type="range" id="face19" class="face19" min="0" max="20">
+								<a href="#" class="arrow arrow-right">&nbsp;</a>
+							</div>
+						</div>
+					</div>
 				</div>
 
 				<div class="block pilosite">
 					<div class="group" style="padding-top: 0;">
 						<div class="input">
 							<div class="label">Cabelo</div>
-							<div class="label-value" data-legend="77"></div>
+							<div id="data-legend-hair" class="label-value" data-legend=""></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="hair" class="hair" min="0" max="77">
+								<input value="0" type="range" id="hair" class="hair" min="0" max="">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 
 						<div class="input">
 							<div class="label">Cor do Cabelo</div>
-							<div class="label-value" data-legend="60"></div>
+							<div class="label-value" data-legend="63"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="haircolor" class="haircolor" min="0" max="60">
+								<input value="0" type="range" id="haircolor" class="haircolor" min="0" max="63">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -149,7 +301,7 @@
 							<div class="label-value" data-legend="10"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="10" type="range" id="makeupintensity" class="makeupintensity" min="0" max="10">
+								<input value="0" type="range" id="makeupintensity" class="makeupintensity" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -181,7 +333,7 @@
 							<div class="label-value" data-legend="10"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="10" type="range" id="lipstickintensity" class="lipstickintensity" min="0" max="10">
+								<input value="0" type="range" id="lipstickintensity" class="lipstickintensity" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -213,7 +365,7 @@
 							<div class="label-value" data-legend="10"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="10" type="range" id="eyebrowintensity" class="eyebrowintensity" min="0" max="10">
+								<input value="0" type="range" id="eyebrowintensity" class="eyebrowintensity" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -245,7 +397,7 @@
 							<div class="label-value" data-legend="10"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="10" type="range" id="beardintentisy" class="beardintentisy" min="0" max="10">
+								<input value="0" type="range" id="beardintentisy" class="beardintentisy" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -261,7 +413,7 @@
 						</div>
 					</div>
 
-					<div class="group" style="padding-bottom: 0px;">
+					<div class="group" style="padding-bottom: 0;">
 						<div class="input">
 							<div class="label">Blush</div>
 							<div class="label-value" data-legend="32"></div>
@@ -277,12 +429,12 @@
 							<div class="label-value" data-legend="10"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="10" type="range" id="blushintentisy" class="blushintentisy" min="0" max="10">
+								<input value="0" type="range" id="blushintentisy" class="blushintentisy" min="0" max="10">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 
-						<div class="input">
+						<div class="input" style="padding-bottom: 0;">
 							<div class="label">Cor do Blush</div>
 							<div class="label-value" data-legend="63"></div>
 							<div class="type-range">
@@ -297,15 +449,7 @@
 			</form>
 		</div>
 
-		<div class="popup confirmation">
-			<p>Deseja salvar a aparência atual?</p>
-			<div class="buttons">
-				<div class="button yes">S I M</div>
-				<div class="button no">N Ã O</div>
-			</div>
-		</div>
-
-		<script src="front.js" type="text/javascript"></script>
-		<script src="script.js" type="text/javascript"></script>
+		<script src="front.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
