--- a/server/resources/[vrp]/barbershop/web-side/index.html
+++ b/server/resources/[vrp]/barbershop/web-side/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<title>#creative</title>
-		<script src="nui://game/ui/jquery.js"></script>
+		<title>#vrp</title>
+		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
@@ -9,49 +9,19 @@
 		<div class="openBarbershop">
 
 			<div class="tab">
-				<a href="#" class="visage active" data-link="visage">Familia</a>
-				<a href="#" class="pilosite" data-link="pilosite">Aparência</a>
+				<a href="#" class="visage active" data-link="visage">Primário</a>
+				<a href="#" class="pilosite" data-link="pilosite">Secundário</a>
 			</div>
 
 			<form id="formBarbershop">
 				<div class="block visage active">
-					<div class="group" style="padding-top: 0;">
-						<div class="input">
-							<div class="label">Pai</div>
-							<div class="label-value" data-legend="44"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="fathers" class="fathers" min="0" max="44">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Mãe</div>
+					<div class="group" style="padding-top: 0;">						
+						<div class="input" style="display: none;">
+							<div class="label">Cor da Pele</div>
 							<div class="label-value" data-legend="45"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="mothers" class="mothers" min="21" max="45">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Semblante</div>
-							<div class="label-value" data-legend="100"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="10" type="range" id="kinship" class="kinship" min="0" max="100">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Cor da Pele</div>
-							<div class="label-value" data-legend="100"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="skincolor" class="skincolor" min="0" max="100">
+								<input value="0" type="range" id="skinColor" class="skinColor" min="0" max="45">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -61,19 +31,19 @@
 							<div class="label-value" data-legend="31"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="eyecolor" class="eyecolor" min="0" max="31">
+								<input value="0" type="range" id="eyesColor" class="eyesColor" min="0" max="31">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 					</div>
 
-					<div class="group">
+					<div class="group" style="padding-bottom: 0;">
 						<div class="input">
 							<div class="label">Acne</div>
 							<div class="label-value" data-legend="23"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="acne" class="acne" min="0" max="23">
+								<input value="-1" type="range" id="complexionModel" class="complexionModel" min="-1" max="11">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -83,7 +53,7 @@
 							<div class="label-value" data-legend="12"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="12" type="range" id="stains" class="stains" min="0" max="12">
+								<input value="12" type="range" id="blemishesModel" class="blemishesModel" min="-1" max="23">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -93,7 +63,7 @@
 							<div class="label-value" data-legend="17"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="freckles" class="freckles" min="0" max="17">
+								<input value="0" type="range" id="frecklesModel" class="frecklesModel" min="-1" max="17">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -103,149 +73,7 @@
 							<div class="label-value" data-legend="15"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="15" type="range" id="aging" class="aging" min="0" max="15">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="group" style="padding-bottom: 0px;">
-						<div class="input">
-							<div class="label">Largura do Nariz</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face00" class="face00" min="-10" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Altura do Nariz</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face01" class="face01" min="-10" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Tamanho do Nariz</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face04" class="face04" min="-10" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Altura da Testa</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face06" class="face06" min="-10" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Altura da Olheira</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face08" class="face08" min="-10" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Tamanho da Olheira</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face09" class="face09" min="-10" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Largura da Bochecha</div>
-							<div class="label-value" data-legend="20"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face10" class="face10" min="0" max="20">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Grossura da Boca</div>
-							<div class="label-value" data-legend="20"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face12" class="face12" min="-20" max="20">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Tamanho da Bochecha</div>
-							<div class="label-value" data-legend="20"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face13" class="face13" min="-20" max="20">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Grossura do Pescoço</div>
-							<div class="label-value" data-legend="20"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face14" class="face14" min="-20" max="20">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Tamanho do Queixo</div>
-							<div class="label-value" data-legend="20"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face15" class="face15" min="-20" max="20">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Grossura do Queixo</div>
-							<div class="label-value" data-legend="20"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face16" class="face16" min="0" max="20">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Alinhamento do Queixo</div>
-							<div class="label-value" data-legend="20"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face17" class="face17" min="-20" max="20">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input" style="padding-bottom: 0;">
-							<div class="label">Tamanho do Pescoço</div>
-							<div class="label-value" data-legend="20"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="face19" class="face19" min="0" max="20">
+								<input value="15" type="range" id="ageingModel" class="ageingModel" min="-1" max="14">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -256,20 +84,20 @@
 					<div class="group" style="padding-top: 0;">
 						<div class="input">
 							<div class="label">Cabelo</div>
-							<div id="data-legend-hair" class="label-value" data-legend=""></div>
+							<div class="label-value" data-legend="77"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="hair" class="hair" min="0" max="">
+								<input value="0" type="range" id="hairModel" class="hairModel" min="0" max="77">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 
 						<div class="input">
 							<div class="label">Cor do Cabelo</div>
-							<div class="label-value" data-legend="63"></div>
+							<div class="label-value" data-legend="60"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="haircolor" class="haircolor" min="0" max="63">
+								<input value="0" type="range" id="firstHairColor" class="firstHairColor" min="0" max="60">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -279,7 +107,7 @@
 							<div class="label-value" data-legend="60"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="haircolor2" class="haircolor2" min="0" max="60">
+								<input value="0" type="range" id="secondHairColor" class="secondHairColor" min="0" max="60">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -288,33 +116,13 @@
 					<div class="group">
 						<div class="input">
 							<div class="label">Maquiagem</div>
-							<div class="label-value" data-legend="72"></div>
+							<div class="label-value" data-legend="71"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="makeup" class="makeup" min="0" max="72">
+								<input value="0" type="range" id="makeupModel" class="makeupModel" min="-1" max="71">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Intensidade da Maquiagem</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="makeupintensity" class="makeupintensity" min="0" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Cor da Maquiagem</div>
-							<div class="label-value" data-legend="62"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="makeupcolor" class="makeupcolor" min="0" max="62">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
+						</div>						
 					</div>
 
 					<div class="group">
@@ -323,17 +131,7 @@
 							<div class="label-value" data-legend="10"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="lipstick" class="lipstick" min="0" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Intensidade do Batom</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="lipstickintensity" class="lipstickintensity" min="0" max="10">
+								<input value="-1" type="range" id="lipstickModel" class="lipstickModel" min="-1" max="9">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -343,7 +141,7 @@
 							<div class="label-value" data-legend="63"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="lipstickcolor" class="lipstickcolor" min="0" max="63">
+								<input value="0" type="range" id="lipstickColor" class="lipstickColor" min="0" max="63">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -355,17 +153,7 @@
 							<div class="label-value" data-legend="34"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="eyebrow" class="eyebrow" min="0" max="34">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Intensidade da Sobrancelha</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="eyebrowintensity" class="eyebrowintensity" min="0" max="10">
+								<input value="0" type="range" id="eyebrowsModel" class="eyebrowsModel" min="0" max="34">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -375,7 +163,7 @@
 							<div class="label-value" data-legend="54"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="eyebrowcolor" class="eyebrowcolor" min="0" max="54">
+								<input value="0" type="range" id="eyebrowsColor" class="eyebrowsColor" min="0" max="54">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -387,17 +175,7 @@
 							<div class="label-value" data-legend="28"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="beard" class="beard" min="0" max="28">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input">
-							<div class="label">Intensidade da Barba</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="beardintentisy" class="beardintentisy" min="0" max="10">
+								<input value="-1" type="range" id="beardModel" class="beardModel" min="-1" max="28">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
@@ -407,49 +185,40 @@
 							<div class="label-value" data-legend="54"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="beardcolor" class="beardcolor" min="0" max="54">
+								<input value="0" type="range" id="beardColor" class="beardColor" min="0" max="63">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 					</div>
 
-					<div class="group" style="padding-bottom: 0;">
+					<div class="group" style="padding-bottom: 0px;">
 						<div class="input">
 							<div class="label">Blush</div>
 							<div class="label-value" data-legend="32"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="blush" class="blush" min="0" max="32">
+								<input value="-1" type="range" id="blushModel" class="blushModel" min="-1" max="32">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 
 						<div class="input">
-							<div class="label">Intensidade do Blush</div>
-							<div class="label-value" data-legend="10"></div>
-							<div class="type-range">
-								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="blushintentisy" class="blushintentisy" min="0" max="10">
-								<a href="#" class="arrow arrow-right">&nbsp;</a>
-							</div>
-						</div>
-
-						<div class="input" style="padding-bottom: 0;">
 							<div class="label">Cor do Blush</div>
 							<div class="label-value" data-legend="63"></div>
 							<div class="type-range">
 								<a href="#" class="arrow arrow-left">&nbsp;</a>
-								<input value="0" type="range" id="blushcolor" class="blushcolor" min="0" max="63">
+								<input value="0" type="range" id="blushColor" class="blushColor" min="0" max="63" step="1">
 								<a href="#" class="arrow arrow-right">&nbsp;</a>
 							</div>
 						</div>
 					</div>
 				</div>
-				<button class="submit">S  A  L  V  A  R</button>
+				<div class="buttons">
+				<button class="button yes">S  A  L  V  A  R</button>
+				</div>
 			</form>
 		</div>
-
-		<script src="front.js"></script>
-		<script src="script.js"></script>
+		<script src="front.js" type="text/javascript"></script>
+		<script src="script.js" type="text/javascript"></script>
 	</body>
 </html>
