--- a/server/resources/[vrp]/hud/web-side/index.html
+++ b/server/resources/[vrp]/hud/web-side/index.html
@@ -9,23 +9,23 @@
 		<script src="jquery.js"></script>
 	</head>
 	<body>
+		<div id="saltyScreen">Aguardando conexão com o teamspeak</div>
+
 		<div id="displayLogo"></div>
 
 		<div id="displayHud">
 			<div id="displayTop">
 				<span id="mph"></span>
 				<span id="gasoline"></span>
-			    <span id="seatBeltOff"><img src="beltOff.png"></span>
-			    <span id="seatBeltOn"><img src="beltOn.png"></span>
-			    <span id="hardBeltOff"><img src="beltOff.png"></span>
-			    <span id="hardBeltOn"><img src="beltOn.png"></span>
+				<span id="seatBelt"></span>
+				<span id="hardBelt"></span>
 			</div>
 
 			<div id="displayMiddle"></div>
 
 			<div id="displayBottom">
 				<div class="voiceBackground">
-					<div class="middleIcon" id="voice" style="background: #222 url(micOff.png);"></div>
+					<div class="middleIcon" id="voice"></div>
 
 					<svg height="37px" width="37px">
 						<circle class="voiceDisplay" cx="19" cy="19" r="16"/>
