--- a/server/resources/[vrp]/notify/web-side/index.html
+++ b/server/resources/[vrp]/notify/web-side/index.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html>
 	<head>
 		<meta charset="UTF-8">
 		<title>#creative</title>
 		<script src="nui://game/ui/jquery.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
