--- a/server/resources/[Essentials]/vrp/web-side/index.html
+++ b/server/resources/[Essentials]/vrp/web-side/index.html
@@ -16,5 +16,10 @@
 		<div id="deathDiv">
 			<div id="deathText"></div>
 		</div>
+
+		<div id="statusDiv">
+			<div id="reposeDiv"></div>
+			<div id="wantedDiv"></div>
+		</div>
 	</body>
 </html>
