--- a/server/resources/[vrp]/hud/web-side/index.html
+++ b/server/resources/[vrp]/hud/web-side/index.html
@@ -9,7 +9,7 @@
 		<script src="jquery.js"></script>
 	</head>
 	<body>
-		<div id="saltyScreen">Aguardando conexão com o teamspeak</div>
+		<!--<div id="saltyScreen">Aguardando conexão com o teamspeak</div>-->
 
 		<div id="displayLogo"></div>
 
