--- a/server/resources/[vrp]/tokovoip/nui/index.html
+++ b/server/resources/[vrp]/tokovoip/nui/index.html
@@ -1,39 +1,15 @@
 <html>
 	<head>
 	    <title>#creative</title>
+		<link rel="stylesheet" href="style.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Jura:wght@600&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<script src="nui://game/ui/jquery.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
-	
-		<style>
-		#pluginScreen {
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			display: none;
-			position: absolute;
-			background: #262a38;
-		}
-		#pluginScreenWindow {
-			top: 50%;
-			color: #fff;
-			width: 800px;
-			height: auto;
-			font-size: 24px;
-			margin-left: auto;
-			margin-right: auto;
-			position: relative;
-			text-align: center;
-			transform: translateY(-50%);
-			font-family: "Jura",sans-serif;
-		}
-		</style>
-	
 		<div id="pluginScreen">
-			<div id="pluginScreenWindow">Aguardando conexão com o teamspeak</div>
+			<div id="alertScreen">Aguardando conexão com o teamspeak</div>
 		</div>
 	</body>
 </html>
