--- a/server/resources/[vrp]/notepad/web-side/index.html
+++ b/server/resources/[vrp]/notepad/web-side/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 	<head>
-		<title>#vrp</title>
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<title>#creative</title>
+		<script src="nui://game/ui/jquery.js"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div class="notepad">
-			<textarea></textarea>
+			<textarea maxlength="850"></textarea>
 			<button></button>
 		</div>
 	</body>
